# FirstRep

./: .gitignore  PLAN.md  README.md  create_baa_report.py  pyproject.toml  requirements.txt
docs/: README.md
output/: baa_monthly_data.xlsx
scripts/: run-with-utf8.ps1  setup-utf8-profile.ps1
src/: __init__.py  export_baa_monthly.py  main.py  stock_data.py
src/stock_fetcher/: __init__.py  baa_export.py  cli.py  collector.py
tests/: __init__.py  test_collector.py  test_stock_data.py  verify_monthly_data.py
